<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_details"
        android:icon="@drawable/details"
        android:title="Batch"
        android:checked="false"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_history"
        android:icon="@drawable/history"
        android:title="@string/history"
        android:checked="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_tips"
        android:icon="@drawable/navigation"
        android:title="@string/tips"
        android:checked="false"
        app:showAsAction="always"/>

</menu>