<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tbrow"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0.20"
                android:layout_height="@dimen/margin40"
                android:textSize="@dimen/margin12"
                android:text="@string/age"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:gravity="center"
                android:background="@drawable/textview_background_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0.20"
                android:layout_height="@dimen/margin40"
                android:textSize="@dimen/margin12"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/avgweight"
                android:textColor="@color/white"
                android:background="@drawable/textview_background_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0.20"
                android:layout_height="@dimen/margin40"
                android:textSize="@dimen/margin12"
                android:gravity="center"
                android:singleLine="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/consumption"
                android:textColor="@color/white"
                android:background="@drawable/textview_background_header" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0.20"
                android:layout_height="@dimen/margin40"
                android:textSize="@dimen/margin12"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/mortality"
                android:textColor="@color/white"
                android:background="@drawable/textview_background_header"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0.20"
                android:layout_height="@dimen/margin40"
                android:textSize="@dimen/margin12"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/weightgain"
                android:textColor="@color/white"
                android:background="@drawable/textview_background_header"
                android:fontFamily="@font/montserrat"/>
        </TableRow>

    </TableLayout>

</LinearLayout>