<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_root_home_view"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:weightSum="1"
            android:layout_margin="@dimen/margin5"
            android:padding="@dimen/margin5"
            android:background="@drawable/footer_backgroud"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/margin0"
                android:layout_height="wrap_content"
                android:textColor="#CFE4F5"
                android:text="@string/machineno"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textSize="@dimen/margin14"
                android:layout_weight="0.20"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/margin0"
                android:layout_height="wrap_content"
                android:textColor="#CFE4F5"
                android:text="@string/stepdayhr"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/margin14"
                android:layout_weight="0.20"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/margin0"
                android:layout_height="wrap_content"
                android:text="@string/tset"
                android:textColor="#CFE4F5"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textSize="@dimen/margin14"
                android:layout_weight="0.20"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/margin0"
                android:layout_height="wrap_content"
                android:text="@string/rhset"
                android:textColor="#CFE4F5"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textSize="@dimen/margin14"
                android:layout_weight="0.20"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/margin0"
                android:layout_height="wrap_content"
                android:textColor="#CFE4F5"
                android:text="@string/fan"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/margin14"
                android:layout_weight="0.20"/>
        </androidx.appcompat.widget.LinearLayoutCompat>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5"
            android:padding="@dimen/margin5">



        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>