<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F6F4F4"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin150"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/margin10"-->
<!--            android:textSize="@dimen/margin20"-->
<!--            android:gravity="center"-->
<!--            android:fontFamily="@font/montserrat"-->
<!--            android:textStyle="bold"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/forget"/>-->

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:textSize="@dimen/margin15"
            android:fontFamily="@font/montserrat"
                android:gravity="center"
            android:textStyle="bold"
                android:textColor="#484848"
                android:text="@string/enteremail"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:textSize="@dimen/margin15"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textColor="#484848"
            android:text="@string/enteremail1"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin50"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/textview_background"
                android:hint="@string/email"
                android:padding="@dimen/margin10">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_request"
                android:layout_width="@dimen/margin200"
                android:layout_gravity="center"
                android:layout_height="@dimen/margin45"
                android:layout_marginTop="20dp"
                android:background="@drawable/footer_backgroud"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/NewPassword"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin15"
                android:textSize="@dimen/margin18"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textColor="#0071CA"
                android:text="@string/cancel"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>